# planetary_dynamics

./: Cargo.toml  Modelling.xlsx
benches/: terrain_absorption.rs  trig.rs  u8_to_f64.rs
examples/: adjacency_check.rs  orbit_rotation_radiation.rs
src/: adjacency.rs  colony_cost.rs  lib.rs  solar_radiation.rs  terrain.rs  tile_gen.rs  tiles.rs
