[package]
name = "planetary_dynamics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
physics_types = { git = "https://github.com/frsrblch/physics_types" }
fxhash = "^0.2.1"
num-traits = "^0.2.14"

[dev-dependencies]
criterion = "0.3.5"
rayon = "^1.5.1"

[[bench]]
name = "trig"
harness = false

[[bench]]
name = "u8_to_f64"
harness = false

[[example]]
name = "adjacency_check"