[package]
name = "planetary_dynamics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbital_mechanics = { git = "https://github.com/frsrblch/orbital_mechanics" }
physics_types = { git = "https://github.com/frsrblch/physics_types" }
fxhash = "^0.2.1"
num-traits = "^0.2.14"
rand = "^0.8.4"
itertools = "^0.10.1"

[dev-dependencies]
rayon = "^1.5.1"

[[example]]
name = "adjacency_check"